rust-examples/tests/compile-fail/Rule_9_1.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let x: u16;
    println!("{}", x);
}
